--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,7 +9,7 @@
 body{ 
     width: 100%;
     min-height: 100vh;
-    background-color: rgb(207, 193, 193);
+    background-color: rgb(243, 233, 233);
     margin:0;
     padding:0;
     display: flex;
@@ -72,8 +72,7 @@ body{
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    overflow: hidden;
-    
+    overflow: auto; 
 }
 .profile-foto img{
     height: 6rem;
