--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,6 +15,16 @@ body{
     display: flex;
     justify-content: center;
 }
+img#foto{
+    position:relative;
+    left:259px;
+    top:4px;
+    width:245px;
+    height:432px;
+    border: 3px solid rgba(0,0,0.4);
+
+
+}
 .instagram-wrapper{
     display:flex;
     align-items: center;
@@ -36,7 +46,7 @@ body{
     -ms-flex-preferred-size: 454px;
     flex-basis: 454px;
     height: 618px;
-    margin-left: -35px;
+    margin-left: -120px;
     margin-right: -15px;
     
 }
@@ -55,7 +65,6 @@ body{
     flex-direction: column;
     background-color: #ffffff;
     width: 100%;
-
     padding: 10px 0px;
     border: 3px solid lightgray;
 }
